fix: Change background color and adjust grid gap

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
 }
 
 :root{
-    --background-color: #0D1117;
+    --background-color: #2A2A2E;
     --danger-color: #dc3545;
     --background-color-hover: rgba(180, 180, 180, 0.2);
     --background-card-content: #38383D;
@@ -166,7 +166,7 @@ body{
     margin-bottom: 100px;
     display: grid;
     grid-template-columns: 180px 180px 180px 180px;
-    grid-gap: 30px;
+    grid-gap: 24px;
 }
 
 .content a {
